style(ddd-bdd-tdd): fix coding style practices